[tool.poetry]
name = "web-crawler"
version = "0.1.0"
description = "Toy URL web crawler"
authors = ["Thiago Kenji Okada <thiagokokada@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
httpx = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
mypy = "^0.812"
pytest-mypy = "^0.8.1"
black = "^20.8b1"
pytest-black = "^0.3.12"
pytest-datafixtures = "^1.0.0"
pytest-asyncio = "^0.14.0"
pytest-httpx = "^0.11.0"

[tool.poetry.scripts]
web-crawler = "web_crawler.__main__:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
