[tool.poetry]
name = "web-crawler"
version = "0.1.0"
description = "Toy URL web crawler"
authors = ["Thiago Kenji Okada <thiagokokada@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.9b0"
pytest-datafixtures = "^1.0.0"
pytest-asyncio = "^0.15.1"
pytest-httpx = "^0.13.0"

[tool.poetry.scripts]
web-crawler = "web_crawler.__main__:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
